--- a/Untitled-1.yml
+++ b/Untitled-1.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: "all"
   tasks:
-   - name: 
-     command: df -h
-     register: storage
-    
+   - name: "Create New User" 
+     user:
+       name: Dimon_Demon
+       shell: /bin/bash
